--- a/CATIA_Lib/BOM Export Test VB/MainWindow.xaml
+++ b/CATIA_Lib/BOM Export Test VB/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Height="42" Margin="366,101,0,0" VerticalAlignment="Top" Width="81"/>
         <TextBlock x:Name="PartNumber" HorizontalAlignment="Left" Height="34" Margin="18,109,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="219"/>
+        <Button x:Name="button1" Content="3D" HorizontalAlignment="Left" Height="54" Margin="202,196,0,0" VerticalAlignment="Top" Width="95"/>
 
     </Grid>
 </Window>
