--- a/CATIA_Lib/BOM Export Test VB/MainWindow.xaml
+++ b/CATIA_Lib/BOM Export Test VB/MainWindow.xaml
@@ -11,6 +11,7 @@
         <TextBlock x:Name="PartNumber" HorizontalAlignment="Left" Height="34" Margin="18,109,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="219"/>
         <Button x:Name="button1" Content="3D" HorizontalAlignment="Left" Height="54" Margin="180,89,0,0" VerticalAlignment="Top" Width="95"/>
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Height="Auto" Margin="18,186,0,0" VerticalAlignment="Top" Width="Auto"/>
+        <Button x:Name="button2" Content="Create Panel" HorizontalAlignment="Left" Height="55" Margin="237,216,0,0" VerticalAlignment="Top" Width="91"/>
 
     </Grid>
 </Window>
